# s3-tree

./: Makefile  README.md  __main__.py  pyproject.toml  setup.py
s3_tree/: __main__.py  s3_tree.py
