[tool.poetry]
name = "s3_tree"
version = "0.1.0"
description = ""
authors = ["Selim Onat"]
classifiers = ["Operating System :: MacOS",  "Operating System :: POSIX :: Linux"]

[tool.poetry.dependencies]
python = ">3.9,<3.12"
boto3 = "^1.28.8"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
