[tool.poetry]
name = "s3_tree"
version = "0.1.0"
description = ""
authors = ["Selim Onat"]
classifiers = ["Operating System :: MacOS",  "Operating System :: POSIX :: Linux"]

[tool.poetry.dependencies]
python = ">3.9,<3.12"
boto3 = "^1.28.8"
typer = "^0.9.0"
setuptools = "^68.0.0"
build = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
s3_tree = "s3_tree.__main__:app"

[project]
name = "s3_tree"
version = "0.1.0"
description = ""
authors = [{name="Selim Onat"}]
classifiers = ["Operating System :: MacOS",  "Operating System :: POSIX :: Linux"]
requires-python = ">=3.9,<3.12"
dependencies = [
    "boto3==1.28.8",
    "typer==0.9.0",
    "setuptools==68.0.0",
    "build==0.10.0"
    ]